--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "deploy": "pnpm run build && gh-pages -d dist",
+    "deploy": "pnpm run build && gh-pages -d dist --cname 'hts.efzstella.moe'",
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
